--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
+    "unplugin-fonts": "^1.3.1",
     "vite": "^6.0.1"
   }
 }
